<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TermsAndCondition">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_above="@id/container"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Terms and Conditions of Use"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Acceptance of Terms"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term1"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Description of Services"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/term2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. User Conduct"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term3"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Privacy"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term4"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5. Intellectual Property"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term5"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6. Limitation of Liability"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term6"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7. Changes to Terms and Conditions"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term7"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8. Governing Law"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term8"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9. Contact Us"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term9"
                android:fontFamily="@font/poppins_light"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="I have read the Terms and Condditions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/disagreeButton"
                android:background="@drawable/border_primary"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="Disagree"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/agreeButton"
                style="@style/primary_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:text="Agree"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>