<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/profile_icon"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/profile_picture" />

        <TextView
            android:id="@+id/myReportTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/myName"
        style="@style/profile_display_info"
        android:text="Name"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myEmail"
        style="@style/profile_display_info"
        android:text="@string/email"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myPhone"
        style="@style/profile_display_info"
        android:text="@string/phone"
        android:layout_gravity="center_horizontal"/>

</androidx.appcompat.widget.LinearLayoutCompat>
