<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UserReport">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_primary"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/topicTextView"
                    style="@style/text_primary_regular_16sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/topic" />

                <EditText
                    android:id="@+id/topicReportInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="top|start"
                    android:hint="Input text..."
                    android:maxLines="5"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_primary"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/descriptionText"
                    style="@style/text_primary_regular_16sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/descriptionReportInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="top|start"
                    android:hint="Input text..."
                    android:maxLines="10"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <FrameLayout
                    android:id="@+id/typeFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_black">
                    <Spinner
                        android:id="@+id/report_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_primary"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/text_primary_regular_16sp"
                    android:layout_marginBottom="10dp"
                    android:text="Upload image" />

                <LinearLayout
                    android:id="@+id/uploadMediaButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/uploadMediaImage"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:src="@drawable/image_icon"
                        app:tint="@color/primary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <CheckBox
                    android:id="@+id/checkBox2"
                    style="@style/text_primary_regular_16sp"
                    android:text="@string/submit_anonymously" />

            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                style="@style/primary_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>